--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,5 @@ dependencyResolutionManagement {
 }
 rootProject.name = "AXPlayerLib"
 include ':app'
+include ':axplayer-arm64'
+include ':axplayer-armv7a'
