--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,11 @@ android {
         externalNativeBuild {
             cmake {
                 cppFlags '-std=c++11'
+                arguments "-DAXFCORE_BASE=../android/build/ffmpeg"
             }
+        }
+        ndk {
+            abiFilters "armeabi-v7a", "arm64-v8a"
         }
     }
 
@@ -33,7 +37,7 @@ android {
     }
     externalNativeBuild {
         cmake {
-            path file('src/main/cpp/CMakeLists.txt')
+            path file('../MediaCore/CMakeLists.txt')
             version '3.22.1'
         }
     }
