1、音频集成oboe进行播放 2、升级到c++17

--- a/MediaCore/CMakeLists.txt
+++ b/MediaCore/CMakeLists.txt
@@ -1,15 +1,17 @@
 cmake_minimum_required(VERSION 3.22)
 project(AXPlayerCore)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 # ===================== 目录结构 =====================
 set(AX_MEDIA_CORE_DIR ${CMAKE_CURRENT_LIST_DIR})
-set(AX_PLAYER_DIR ${AX_MEDIA_CORE_DIR}/player)
+set(AX_PLAYER_DIR     ${AX_MEDIA_CORE_DIR}/player)
 set(AX_SOUNDTOUCH_DIR ${AX_MEDIA_CORE_DIR}/soundtouch)
-set(AX_LIBYUV_DIR ${AX_MEDIA_CORE_DIR}/libyuv)
-set(AX_JNI_DIR ${AX_MEDIA_CORE_DIR}/player/jni)
+set(AX_LIBYUV_DIR     ${AX_MEDIA_CORE_DIR}/libyuv)
+set(AX_JNI_DIR        ${AX_MEDIA_CORE_DIR}/player/jni)
+set(AX_OBOE_DIR       ${AX_MEDIA_CORE_DIR}/oboe)   # ★ Oboe 仅放在 MediaCore/oboe
 
 # ===================== 外部参数 =====================
 get_filename_component(PROJ_ROOT ${AX_MEDIA_CORE_DIR} DIRECTORY)     # AXPlayerLib/
@@ -23,6 +25,10 @@ if (NOT IS_ABSOLUTE "${AXFCORE_BASE}")
 endif ()
 message(STATUS "ANDROID_ABI=${ANDROID_ABI}")
 message(STATUS "AXFCORE_BASE=${AXFCORE_BASE}")
+
+# ===================== Oboe 开关（可选） =====================
+option(AX_WITH_OBOE "Enable Oboe audio backend if MediaCore/oboe exists" ON)
+set(OBOE_TARGET "")   # 将在后面探测并设置为 oboe 或 oboe::oboe
 
 # ===================== 源文件收集 =====================
 file(GLOB AXPLAYER_SRC
@@ -52,8 +58,6 @@ add_library(AXPlayer SHARED
         ${SOUNDTOUCH_SRC}
 )
 
-target_compile_features(AXPlayer PRIVATE cxx_std_11)
-
 target_include_directories(AXPlayer
         PUBLIC
         ${AX_PLAYER_DIR}/include
@@ -69,7 +73,7 @@ target_compile_options(AXPlayer PRIVATE
         -ffunction-sections
         -fdata-sections
 )
-#target_compile_definitions(AXPlayer PRIVATE ST_NO_EXCEPTION)
+# target_compile_definitions(AXPlayer PRIVATE ST_NO_EXCEPTION)
 
 option(WITH_SOUNDTOUCH_SIMD "Enable SoundTouch SIMD (NEON/SSE) if available" OFF)
 if (NOT WITH_SOUNDTOUCH_SIMD)
@@ -89,7 +93,30 @@ else ()
     message(WARNING "AXFCore not found at ${AXFCORE_SO}; build continues WITHOUT it.")
 endif ()
 
-
+# ===================== 可选导入 Oboe（仅当存在 MediaCore/oboe 且开关为 ON） =====================
+if (AX_WITH_OBOE)
+    if (EXISTS "${AX_OBOE_DIR}/CMakeLists.txt")
+        # 使用独立的构建目录，避免污染主二进制输出
+        add_subdirectory("${AX_OBOE_DIR}" "${CMAKE_BINARY_DIR}/oboe_build" EXCLUDE_FROM_ALL)
+        # Oboe 1.10.0 通常导出 target 'oboe'，也可能同时提供别名 'oboe::oboe'
+        if (TARGET oboe)
+            set(OBOE_TARGET oboe)
+        elseif (TARGET oboe::oboe)
+            set(OBOE_TARGET oboe::oboe)
+        endif ()
+        if (OBOE_TARGET)
+            target_link_libraries(AXPlayer ${OBOE_TARGET})
+            target_compile_definitions(AXPlayer PRIVATE AX_WITH_OBOE=1)
+            message(STATUS "Oboe found and linked: target=${OBOE_TARGET}")
+        else ()
+            message(WARNING "Oboe subdirectory added but target not found; continue without Oboe link.")
+        endif ()
+    else ()
+        message(STATUS "Oboe not present at ${AX_OBOE_DIR}; skip Oboe integration.")
+    endif ()
+else ()
+    message(STATUS "AX_WITH_OBOE=OFF; skip Oboe integration.")
+endif ()
 
 # ===================== 系统库链接 =====================
 # 建议显式 find_library，避免某些 NDK 版本名字大小写差异
@@ -112,10 +139,6 @@ if (ANDROID_ABI STREQUAL "armeabi-v7a")
     endif ()
 endif ()
 
-#set_source_files_properties(${SOUNDTOUCH_SRC}
-#        PROPERTIES COMPILE_OPTIONS "-fexceptions"
-#)
-
 target_link_libraries(AXPlayer
         ${log-lib}
         ${android-lib}
@@ -128,5 +151,6 @@ target_link_libraries(AXPlayer
         Threads::Threads
 )
 
+# 更紧凑的 SO：丢弃未用符号 & 隐藏静态库内部符号
 set(CMAKE_SHARED_LINKER_FLAGS
         "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--gc-sections -Wl,--exclude-libs,ALL")
